# koba

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.unified  LICENSE  README.md  SECURITY.md  WHITEPAPER_KOBA_ASI_CONTAINMENT.md  docker-compose.yml  register_tools.py  requirements.txt  setup.py
vacp/: .env.example  IMPLEMENTATION_PLAN.md  Procfile  QUICKSTART.md  README.md  alembic.ini  openapi.yaml  pyproject.toml  railway.json  requirements.txt
vacp/deploy/helm/vacp/: .helmignore  Chart.yaml  values.yaml
vacp/deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml
vacp/docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml
vacp/docs/: ai_scenarios_comprehensive.md  compliance_mapping.md  deployment.md  incident_response.md  threat_model.md
vacp/docs/compliance/: HIPAA_BAA_TEMPLATE.md
vacp/docs/operations/: DEPLOYMENT_RUNBOOK.md
vacp/integrations/clawdbot/: README.md  index.ts  install.py  package.json  tsconfig.json  types.d.ts
vacp/src/vacp/: __init__.py  __main__.py  config.py  demo_server.py  main.py
vacp/src/vacp/api/: __init__.py  middleware.py  models.py  server.py
vacp/src/vacp/auth/: __init__.py  api_keys.py  rbac.py  sessions.py
vacp/src/vacp/benchmarks/: __init__.py  framework.py  scenarios.py
vacp/src/vacp/cli/: __init__.py  main.py
vacp/src/vacp/compliance/: __init__.py  report.py
vacp/src/vacp/core/: __init__.py  advanced_policy.py  anchor_scheduler.py  audit_export.py  auth.py  backup.py  blockchain.py  capabilities.py  containment.py  crypto.py  database.py  gateway.py  integrations.py  key_hierarchy.py  kill_switch.py  merkle.py  normalize.py  policy.py  provider_health.py  receipts.py  registry.py  sandbox.py  semantic_analysis.py  tenant.py  tokens.py  tripwire.py  vault.py
vacp/src/vacp/demo/: __init__.py  agent.py
vacp/src/vacp/examples/: __init__.py  basic_usage.py
vacp/src/vacp/mcp/: __init__.py  __main__.py  server.py
vacp/src/vacp/migrations/: __init__.py  env.py  utils.py
vacp/src/vacp/monitoring/: __init__.py  alerts.py  health.py  logging.py  metrics.py
vacp/src/vacp/providers/: __init__.py  anthropic.py  base.py  interceptor.py  openai.py
vacp/src/vacp/sdk/: __init__.py  config.py  tools.py  wrapper.py
vacp/src/vacp/security/: __init__.py  bandit.yaml  encoding_detector.py  injection_detection.py  ml_detection.py  run_security_scans.py  safety-policy.yaml  sanitizer.py  trivy.yaml
vacp/src/vacp/storage/: __init__.py  base.py  sqlite.py
vacp/src/vacp/testing/: __init__.py  harness.py  vectors.py
vacp/src/vacp/tests/: __init__.py  (+18 more)
vacp/tests/: test_integration_flow.py
(+93 files in other folders)
